# TP_C_task-1

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  functions.c  header.h  include.h  main.c
tests/: CMakeLists.txt  test.cpp
